--- a/.github/workflows/run-test.yaml
+++ b/.github/workflows/run-test.yaml
@@ -33,8 +33,10 @@ jobs:
 
       - name: make executable gradlew
         run: chmod +x ./gradlew
+        working-directory: sampleapp
 
       # run은 사용자 지정 스크립트 실행
       - name: run unittest
         run: |
           ./gradlew clean test
+        working-directory: sampleapp
